# mandos

./: .gitignore  CLAUDE.md  Cargo.toml  JOURNAL.md  PLAN.md  README.md  README.web.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.terminal.json  tsconfig.web.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy.yml
dist-web/: index.html
dist-web/assets/: index-yPfe1bT2.js
dist-web/maps/: middle_earth_pois.csv
docs/: GEO-FEATURES-PLAN.md  MAP-PAINTING-CACHING.md  MAP-PAINTING.md  map_painting.py
mandos_client/: Cargo.toml
mandos_client/src/: main.rs
mandos_common/: Cargo.toml
mandos_common/src/: lib.rs
mandos_server/: Cargo.toml
mandos_server/src/: main.rs
maps/: map.spec.md  middle_earth.worldmap  shire
public/maps/: middle_earth.worldmap
scripts/: check_and_preprocess.py  geo_features_preprocessing.py  map_preprocessing.py  mountain_depth_preprocessing.py
src/: Game.tsx  MapData.ts  MountainData.ts  RegionData.ts  index.tsx  main.rs
src/components/: MapDisplay.tsx  Player.ts  Position.ts  RegionInfo.ts  Renderable.ts
src/core/components/: Movable.ts  Renderable.ts
src/core/data/: MapData.ts  (+2 more)
src/ecs/: Component.ts  Entity.ts
src/hooks/: useInputSystem.ts
src/shared/: DataLoader.ts  StyledTile.ts
src/systems/: InputSystem.ts  MovementSystem.ts  RegionDisplaySystem.ts  RenderSystem.ts  TerrainColors.ts  ViewportSystem.ts
src/terminal/: Game.tsx  MapDisplay.tsx  NodeDataLoader.ts  index.tsx
src/web/: CanvasDisplay.tsx  WebDataLoader.ts  WebGame.tsx  index.tsx
(+14 files in other folders)
